[package]
edition = "2018"
name = "maiden"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "0.3.2"
tokio = {version = "1", features = ["full"]}

serde = {version = "1", features = ["derive"]}
serde_yaml = "0.8"

structopt = "0.3.23"

thiserror = "1"

replace = {path = "replace", features = ["derive"]}
